--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,14 @@
 /auth.json
 /node_modules
 /public/build
+/public/css
+/public/js
+/public/fonts
 /public/hot
 /public/storage
 /storage/*.key
 /storage/pail
+/resources/css/filament
 /vendor
 Homestead.json
 Homestead.yaml
