--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "flowframe/laravel-trend": "^0.4.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "mike42/escpos-php": "^4.0",
         "spatie/laravel-settings": "^3.6"
     },
     "require-dev": {
